package io.zipcoder.casino;

public class CardFactory {

//    public static Card(String nameOfCard, String suitOfCard, int value) {
//        return new Card(nameOfCard, suitOfCard, value);
//    }
}
