package io.zipcoder.casino;

public interface GamblingGame {

    void addToPot();
    int getPot();
}
