package io.zipcoder.casino;

public class GamblingPlayer extends Player implements GamblerAttributes{
    //can play all games
    //can bet, can win, can cashout.
}
